# utfcpp20

./: .gitignore  API_REFERENCE.md  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: ci-linux-clang.yml  ci-linux-gcc.yml  ci-windows-msvc.yml
doc/html/: annotated.html  classes.html  classutfcpp_1_1exception-members.html  classutfcpp_1_1exception.html  classutfcpp_1_1exception__inherit__graph.dot  classutfcpp_1_1u8__iterator-members.html  classutfcpp_1_1u8__iterator.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_1.dot  inherits.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaceutfcpp.html  utfcpp20_8hpp.html  utfcpp20_8hpp__incl.dot  utfcpp20_8hpp_source.html
doc/html/search/: all_2.js  all_4.js  all_5.js  classes_0.js  classes_1.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  namespaces_0.js  searchdata.js
doc/latex/: annotated.tex  classutfcpp_1_1exception.tex  classutfcpp_1_1exception.tex.tmp  classutfcpp_1_1exception__coll__graph.dot  classutfcpp_1_1u8__iterator.tex  files.tex  hierarchy.tex  namespaces.tex  namespaceutfcpp.tex  refman.tex  utfcpp20_8hpp.tex  utfcpp20_8hpp__incl.dot  utfcpp20_8hpp_source.tex
include/: utfcpp20.hpp
src/: CMakeLists.txt  core.cpp  core.hpp  utfcpp20.cpp
tests/: CMakeLists.txt  core.test.cpp  utfcpp20.test.cpp
